# Lightmapper

./: .gitmodules  Builder.cpp  Builder.h  CMakeLists.txt  Importer.cpp  Importer.h  LightMap.cpp  LightMap.h  LightMapperDefine.h  Model.cpp  Model.h  README.md  main.cpp
Resources/Scenes/: CornellBox.gltf  builtin.gltf
Resources/Shaders/: blit.frag  blit.vert  bounce_light.comp  clear_color.comp  dilate.comp  direct_light.comp  raster.frag  raster.vert  scene.frag  scene.vert  unocclude.comp
